[package]
name = "fsg"
version = "0.1.0"
authors = ["Bradley Bath <badfitz66@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels="0.8.0"
beryllium = { version = "0.3", features = ["extern_crate_raw_window_handle"] }
