[package]
name = "fsg"
version = "0.1.0"
authors = ["Bradley Bath <badfitz66@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default_features = false }
bevy_pixels = "0.1"
rand = "0.8.4"
rand_isaac = "0.3.0"